Version

 - Internal: QS_SetEnvIf directives use an array to store all
   rules (to ensure they are applied in the order they appear
   in the configuration file).

 - Apache 2.4.49 compatibility fix introduced by mod_qos 11.68 is no
   longer applied for Apache version 2.4.50 and newer.

Version 11.68

 - Compatibility with Apache 2.4.49 (avoid segfault when returning
   error code in pre-connection hook / issue similar to CVE-2017-3169).

Version 11.67

 - The QS_LogEnv directive can be used to enable environment variable
   logging. mod_qos writes all environment variables which are set when
   entering a handler to the log.

Version 11.66

 - QS_ClientIpFromHeader supports pseudo IP by creating a hash
   of a HTTP request header's value if the header name is prefixed
   by '#', e.g. #Authorization to use the HTTP basic auth header.
   It's also possible to use the client's SSL client certificate's
   subject and issuer DN if you specify #SSL_CLIENT_S_DN instead
   of a real HTTP header name.
   Note: Does not work for IP geolocation.

Version 11.65

 - Fixed: QS_SrvMinDataRate did not enforce (log only) min data rate
   in simple mode (only one arg).
   Improved min. data rate calculation and updated documentation.

 - Fixed: Several typos in documentation.

Version 11.64

 - Updated request header filter rules (allows signed HTTP exchanges content
   type in Accept header).

 - qsgeo: New pattern to detect "readable" format (no longer adding IP address
   range twice for some file formats).

 - QS_Status: adds the QS_AllConn variable to the maxClients object.

Version 11.63

 - Adds the option 'jsredirect' to the QS_UserTrackingCookieName directive:
   Client (browser) has to use Javascript within the cookie check page
   to fetch the cookie and to redirect the client back to the initially
   requested page (adding Javascript to the cookie challenge).
   SSI variables to be used in the HTML page / Javascript: